--- a/c-sharp/CSharpBin/CSharpBin.csproj
+++ b/c-sharp/CSharpBin/CSharpBin.csproj
@@ -8,20 +8,16 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   
-  <Target Name="GenerateRustDll" BeforeTargets="BeforeBuild" Condition="'$(Configuration)' == 'Release'">
-      <Exec Command="cargo build --release --manifest-path=..\..\rust-lib\Cargo.toml" />
-      <ItemGroup>
-        <Content Include="..\..\rust-lib\target\release\rust_lib.dll">
+  <Target Name="GenerateRustDll" BeforeTargets="BeforeBuild">
+      <Exec Command="cargo build --release --manifest-path=..\..\rust-lib\Cargo.toml" Condition="'$(Configuration)' == 'Release'" />
+      <Exec Command="cargo build           --manifest-path=..\..\rust-lib\Cargo.toml" Condition="'$(Configuration)' == 'Debug'"/>
+      <ItemGroup >
+        <Content Include="..\..\rust-lib\target\release\rust_lib.dll" Condition="'$(Configuration)' == 'Release'">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Include="..\..\rust-lib\target\debug\rust_lib.dll" Condition="'$(Configuration)' == 'Debug'">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
       </ItemGroup>
-  </Target>
-  <Target Name="GenerateRustDll" BeforeTargets="BeforeBuild" Condition="'$(Configuration)' == 'Debug'">
-    <Exec Command="cargo build --manifest-path=..\..\rust-lib\Cargo.toml" />
-    <ItemGroup>
-      <Content Include="..\..\rust-lib\target\debug\rust_lib.dll">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
-    </ItemGroup>
   </Target>
 </Project>
