--- a/c-sharp/CSharpBin/CSharpBin.csproj
+++ b/c-sharp/CSharpBin/CSharpBin.csproj
@@ -8,27 +8,20 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
-  <Target Name="GenerateRustDll" BeforeTargets="BeforeCompile">
-    <Exec Command="cargo build --release --manifest-path=../../rust-lib/Cargo.toml"
-      Condition="'$(Configuration)' == 'Release'" />
-    <Exec Command="cargo build           --manifest-path=../../rust-lib/Cargo.toml"
-      Condition="'$(Configuration)' == 'Debug'" />
+  <Target Name="CompileGenerated" BeforeTargets="BeforeCompile" AfterTargets="GenerateRustDll">
     <PropertyGroup>
       <GeneratedFilePath>../../rust-lib/dotnet/NativeMethods.g.cs</GeneratedFilePath>
     </PropertyGroup>
     <ItemGroup>
       <Compile Include="$(GeneratedFilePath)" />
     </ItemGroup>
-    <ItemGroup>
+  </Target>
+  <Target Name="GenerateRustDll" BeforeTargets="BeforeBuild">
+    <Exec Command="cargo build --release --manifest-path=../../rust-lib/Cargo.toml" Condition="'$(Configuration)' == 'Release'" />
+    <Exec Command="cargo build           --manifest-path=../../rust-lib/Cargo.toml" Condition="'$(Configuration)' == 'Debug'" />
+    <!-- https://stackoverflow.com/a/48714896/7847252 -->
+    <ItemGroup Condition=" '$(OS)' == 'Windows_NT' ">
       <Content Include="../../rust-lib/target/release/rust_lib.dll"
-        Condition="'$(Configuration)' == 'Release'">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
-      <Content Include="../../rust-lib/target/release/rust_lib.so"
-        Condition="'$(Configuration)' == 'Release'">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
-      <Content Include="../../rust-lib/target/release/rust_lib.dylib"
         Condition="'$(Configuration)' == 'Release'">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
@@ -36,8 +29,20 @@
         Condition="'$(Configuration)' == 'Debug'">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+    </ItemGroup>
+    <ItemGroup Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' ">
+      <Content Include="../../rust-lib/target/release/rust_lib.so"
+        Condition="'$(Configuration)' == 'Release'">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
       <Content Include="../../rust-lib/target/debug/rust_lib.so"
         Condition="'$(Configuration)' == 'Debug'">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+    <ItemGroup Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' ">
+      <Content Include="../../rust-lib/target/release/rust_lib.dylib"
+        Condition="'$(Configuration)' == 'Release'">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
       <Content Include="../../rust-lib/target/debug/rust_lib.dylib"
