--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,10 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install latest stable
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable
-        override: true
         components: rustfmt, clippy
     - name: Cache dependencies
       uses: Swatinem/rust-cache@v2.2.1
