fix rust dep caching

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Cache dependencies
       uses: Swatinem/rust-cache@v2.2.1
       with:
-        workspace: "rust-lib"
+        workspaces: "rust-lib"
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
